Ajout de nouvelles classes de réponse et de mappers pour la gestion des statistiques de ventes, des zones de livraison, des transactions de fidélité, des paiements, des avis et des articles de wishlist