@@ -2,85 +2,91 @@ package com.yoteh.api.exception;
 
 import com.yoteh.api.dto.response.common.ErrorResponse;
 import jakarta.servlet.http.HttpServletRequest;
+import java.time.LocalDateTime;
 import java.util.List;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+@Slf4j
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
-
-    // ─── 400 Bad Request ───────────────────────────────────────────
+    // ─── 400 Bad Request ──────────────────────────────────────────
     @ExceptionHandler(BadRequestException.class)
     public ResponseEntity<ErrorResponse> handleBadRequest(
             BadRequestException ex, HttpServletRequest request) {
-        return buildResponse(HttpStatus.BAD_REQUEST, ex.getMessage(), request);
+        return build(HttpStatus.BAD_REQUEST, ex.getMessage(), request, null);
     }
 
-    // ─── 401 Unauthorized ──────────────────────────────────────────
+    // ─── 400 Business Rule Violation ─────────────────────────────
+    @ExceptionHandler(BusinessException.class)
+    public ResponseEntity<ErrorResponse> handleBusiness(
+            BusinessException ex, HttpServletRequest request) {
+        return build(HttpStatus.BAD_REQUEST, ex.getMessage(), request, null);
+    }
+
+    // ─── 401 Unauthorized ─────────────────────────────────────────
     @ExceptionHandler(UnauthorizedException.class)
     public ResponseEntity<ErrorResponse> handleUnauthorized(
             UnauthorizedException ex, HttpServletRequest request) {
-        return buildResponse(HttpStatus.UNAUTHORIZED, ex.getMessage(), request);
+        return build(HttpStatus.UNAUTHORIZED, ex.getMessage(), request, null);
     }
 
     // ─── 404 Not Found ────────────────────────────────────────────
     @ExceptionHandler(ResourceNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleNotFound(
             ResourceNotFoundException ex, HttpServletRequest request) {
-        return buildResponse(HttpStatus.NOT_FOUND, ex.getMessage(), request);
+        return build(HttpStatus.NOT_FOUND, ex.getMessage(), request, null);
     }
 
-    // ─── 409 Conflict (duplicata) ─────────────────────────────────
+    // ─── 409 Conflict ─────────────────────────────────────────────
     @ExceptionHandler(DuplicateResourceException.class)
     public ResponseEntity<ErrorResponse> handleDuplicate(
             DuplicateResourceException ex, HttpServletRequest request) {
-        return buildResponse(HttpStatus.CONFLICT, ex.getMessage(), request);
+        return build(HttpStatus.CONFLICT, ex.getMessage(), request, null);
     }
 
-    // ─── 422 Validation errors (@Valid) ───────────────────────────
+    // ─── 422 Validation @Valid ────────────────────────────────────
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErrorResponse> handleValidation(
             MethodArgumentNotValidException ex, HttpServletRequest request) {
 
         List<String> errors =
                 ex.getBindingResult().getFieldErrors().stream()
-                        .map(error -> error.getField() + " : " + error.getDefaultMessage())
-                        .toList();
-        ErrorResponse response =
-                ErrorResponse.builder()
-                        .status(HttpStatus.UNPROCESSABLE_ENTITY.value())
-                        .message("Erreur de validation")
-                        .path(request.getRequestURI())
-                        .errors(errors)
-                        .build();
+                        .map(FieldError::getDefaultMessage)
+                        .collect(Collectors.toList());
 
-        return new ResponseEntity<>(response, HttpStatus.UNPROCESSABLE_ENTITY);
+        return build(HttpStatus.UNPROCESSABLE_ENTITY, "Erreur de validation", request, errors);
     }
 
     // ─── 500 Catch-all ────────────────────────────────────────────
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorResponse> handleAll(Exception ex, HttpServletRequest request) {
-        log.error("Erreur inattendue: {}", ex.getMessage(), ex);
-        return buildResponse(
-                HttpStatus.INTERNAL_SERVER_ERROR, "Erreur interne du serveur", request);
+        log.error("Erreur inattendue : {}", ex.getMessage(), ex);
+        return build(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur interne du serveur", request, null);
     }
 
-    // ─── Builder ──────────────────────────────────────────────────
-    private ResponseEntity<ErrorResponse> buildResponse(
-            HttpStatus status, String message, HttpServletRequest request) {
+    // ─── Helper ───────────────────────────────────────────────────
+    private ResponseEntity<ErrorResponse> build(
+            HttpStatus status,
+            String message,
+            HttpServletRequest request,
+            List<String> fieldErrors) {
+
         ErrorResponse response =
-                ErrorResponse.builder()
-                        .status(status.value())
-                        .message(message)
-                        .path(request.getRequestURI())
-                        .build();
-        return new ResponseEntity<>(response, status);
+                new ErrorResponse(
+                        status.value(),
+                        status.getReasonPhrase(),
+                        message,
+                        request.getRequestURI(),
+                        LocalDateTime.now(),
+                        fieldErrors);
+        return ResponseEntity.status(status).body(response);
     }
 }
